# LearnRust

./: .clang-format  Cargo.toml
01-introduction/: hello_world
02-guess_game/guess_game/: Cargo.toml
02-guess_game/guess_game/src/: main.rs
03-general_concepts/branch/src/: main.rs
03-general_concepts/compound/src/: main.rs
03-general_concepts/string_/: Cargo.toml
03-general_concepts/string_/src/: lib.rs  main.rs  string_demo.rs
03-general_concepts/variables/src/: main.rs
04-ownership/: ref.cpp
04-ownership/borrow/src/: main.rs
04-ownership/owner/src/: main.rs
04-ownership/pointer/src/: main.rs
04-ownership/reference/src/: main.rs
04-ownership/slice/src/: main.rs
05-struct/demo/src/: main.rs
05-struct/method/src/: main.rs
06-enums_and_pattern/enum_demo/src/: main.rs
06-enums_and_pattern/if_let/src/: main.rs
06-enums_and_pattern/match_demo/src/: main.rs
06-enums_and_pattern/match_option/src/: main.rs
06-enums_and_pattern/option/src/: main.rs
07-module_system/multi_toolkit/: Cargo.toml
07-pkg_crate_module/rust_complex_project/: Cargo.toml
09-error_handling/guessing_game/: Cargo.toml
10-generics/func/: .Cargo.toml.swp
10-generics/func/src/: main.rs
10-generics/generic_func/: Cargo.toml
10-generics/generic_method/: Cargo.toml
11-tests/fail_msg/: Cargo.toml
11-tests/http-client/: Cargo.toml
11-tests/http-client/benches/: performance_bench.rs
11-tests/http-client/examples/: basic_usage.rs
11-tests/http-client/src/: client.rs  lib.rs  parser.rs  validator.rs
11-tests/http-client/tests/: integration_tests.rs
11-tests/use_result/: Cargo.toml
13-iterators_and_closures/iterator_/: Cargo.toml
13-iterators_and_closures/iterator_performance/: Cargo.toml
13-iterators_and_closures/minigrep_v2/: Cargo.toml
15-smart_pointers/mock_object/: Cargo.toml
15-smart_pointers/rc_and_refcell/: Cargo.toml
15-smart_pointers/ref_cyc/: Cargo.toml
15-smart_pointers/reference_count/: Cargo.toml
16-concurrency/passing_message/: Cargo.toml
16-concurrency/sync_and_send_trait/: Cargo.toml
16-concurrency/thread_basics/: Cargo.toml
18-pattern_match/pattern_usage/: Cargo.toml
19-advanced_features/access_mutable_static_var/: Cargo.toml
19-advanced_features/unsafa_rust/: Cargo.toml
19-advanced_features/unsage_trait/: Cargo.toml
_01_introduction/: Cargo.toml
_02_guess_game/: Cargo.toml
_02_guess_game/src/: main.rs
cpp/: closure_cpp.cpp  mock_object.cpp
(+84 files in other folders)
