[workspace]
resolver = "2"
members = [
    "01-introduction/hello_world",
    "02-guess_game/guess_game",
    "03-general_concepts/branch",
    "03-general_concepts/compound",
    "03-general_concepts/variables",
    "04-ownership/borrow",
    "04-ownership/owner",
    "04-ownership/pointer",
    "04-ownership/reference",
    "04-ownership/slice",
    "05-struct/demo",
    "05-struct/method",
    "06-enums_and_pattern/enum_demo", "06-enums_and_pattern/if_let",
    "06-enums_and_pattern/match_demo",
    "06-enums_and_pattern/match_option",
    "06-enums_and_pattern/option",
]
