[workspace]
resolver = "2"
members = [
    "01-introduction/hello_world",
    "02-guess_game/guess_game",
    "03-general_concepts/branch",
    "03-general_concepts/compound",
    "03-general_concepts/string_",
    "03-general_concepts/variables",
    "04-ownership/borrow",
    "04-ownership/owner",
    "04-ownership/pointer",
    "04-ownership/reference",
    "04-ownership/slice",
    "05-struct/demo",
    "05-struct/method",
    "06-enums_and_pattern/enum_demo",
    "06-enums_and_pattern/if_let",
    "06-enums_and_pattern/match_demo",
    "06-enums_and_pattern/match_option",
    "06-enums_and_pattern/option",
    "07-module_system/demo_project",
    "07-module_system/multi_toolkit",
    "07-module_system/rust_complex_project",
    "08-common_collections/hashmap",
    "08-common_collections/string",
    "08-common_collections/vector",
    "09-error_handling/error_propagation",
    "09-error_handling/guessing_game",
    "09-error_handling/panic_macro",
    "09-error_handling/result",
    "10-generics/func",
    "10-generics/generic_func",
    "10-generics/generic_method",
    "10-generics/lifetime",
    "10-generics/trait_",
    "11-tests/adder",
    "11-tests/fail_msg",
    "11-tests/http-client",
    "11-tests/test_org",
    "11-tests/use_result",
    "12-prj_grep/minigrep",
    "13-iterators_and_closures/closure_", "13-iterators_and_closures/iterator_",
]
