[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # For JSON parsing
serde_json = "1.0"                                 # JSON serialization and deserialization
regex = "1.7"                                      # URL validation
